# mdapy

./: .gitignore  LICENSE  Readme.md  pyproject.toml  requirements.txt
examples/: mda_plot2d.py  mda_plot3d.py
examples/data/: datawave.npz
mdapy/: __init__.py  mda.py
src/: __init__.py  mda.py
tests/: test_mda.py
