[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ihc-mdapy"
version = "0.1.0"
description = "Maximum Dissimilarity Algorithm in Python"
authors = [{ name = "Pablo Garcia" }, { email = "pablofueros@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10.0"
license = "MIT"

dependencies = ["numpy>=1.26", "scipy>=1.11.2"]

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-cov>=4.1"]
plot = ["matplotlib>=3.8"]

[project.urls]
Repository = "https://github.com/IHCantabria/mdapy"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ['mdapy']
